fix: double border on tolerations for distributed logs

--- a/stackgres-k8s/src/admin-ui/public/style.css
+++ b/stackgres-k8s/src/admin-ui/public/style.css
@@ -2987,7 +2987,6 @@ tr.details {
 }
 
 tr.details table {
-    border: 1px solid #f0f0f1;
     margin-left: 0;
 }
 
@@ -4996,15 +4995,21 @@ tr.details td:last-of-type .configurationDetails table {
 .form .header:last-child {
     border: 0;
 }
+
 /*Tables Overflow*/
 
 table.tolerations {
     max-height: 240px;
     overflow: auto;
     display: block;
+    border-top: 1px solid #f0f0f1;
 }
 
 table.tolerations tbody {
     display: inline-table;
     width: 100%;
+}
+
+table.tolerations tbody, table.tolerations tbody td {
+    border-top: 0 !important;
 }
